[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Worm/Worm.gd" type="Script" id=1]
[ext_resource path="res://Shaders/smooth_pixel_art_3d.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/albedo_color = Color( 1, 1, 1, 1 )
shader_param/circle_progress = 1.0

[node name="Worm" type="Node2D" groups=[
"WORM",
]]
script = ExtResource( 1 )

[node name="CurveMesh3D" type="MeshInstance" parent="."]
material_override = SubResource( 1 )

[node name="Collision3D" type="StaticBody" parent="."]

[connection signal="input_event" from="Collision3D" to="." method="_on_Collision3D_input_event"]
